--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,9 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: '3.10' 
+    
+    - name: Install Python dependencies
+      uses: py-actions/py-dependency-install@v4
 
     - name: Run build script # run main.py
       run: python build.py
