--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,11 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name: Website
-        path: out
+        path: out/website
         if-no-files-found: error
-        gooey: false
+
+    - uses: actions/upload-artifact@v4
+      with:
+        name: Pack
+        path: out/pack
+        if-no-files-found: error
